[gd_scene load_steps=7 format=2]

[ext_resource path="res://Gameplay/Scripts/Splitscreen.gd" type="Script" id=1]
[ext_resource path="res://Gameplay/Scenes/Elements/FinishedLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Gameplay/Scripts/Elements/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://Gameplay/Scenes/Maps/Basic Artery.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main/Scenes/Partials/GameMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Main/Scenes/Animations/Fade.tscn" type="PackedScene" id=6]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Viewports" type="VBoxContainer" parent="." index="0"]

modulate = Color( 0.898438, 0.821996, 0.754547, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 10
alignment = 1
_sections_unfolded = [ "Visibility", "custom_constants" ]

[node name="ViewportContainer1" type="ViewportContainer" parent="Viewports" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 640.0
margin_bottom = 175.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
stretch = true
stretch_shrink = 1
_sections_unfolded = [ "Size Flags" ]

[node name="FinishedLabel" parent="Viewports/ViewportContainer1" index="0" instance=ExtResource( 2 )]

[node name="Viewport1" type="Viewport" parent="Viewports/ViewportContainer1" index="1"]

arvr = false
size = Vector2( 640, 175 )
own_world = false
world = null
transparent_bg = false
msaa = 0
hdr = true
disable_3d = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer1/Viewport1" index="0"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 3 )

[node name="ViewportContainer2" type="ViewportContainer" parent="Viewports" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 185.0
margin_right = 640.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
stretch = true
stretch_shrink = 1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Visibility" ]

[node name="FinishedLabel" parent="Viewports/ViewportContainer2" index="0" instance=ExtResource( 2 )]

[node name="Viewport2" type="Viewport" parent="Viewports/ViewportContainer2" index="1"]

arvr = false
size = Vector2( 640, 175 )
own_world = false
world = null
transparent_bg = false
msaa = 0
hdr = true
disable_3d = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer2/Viewport2" index="0"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 3 )

[node name="World" parent="Viewports/ViewportContainer2/Viewport2" index="1" instance=ExtResource( 4 )]

[node name="GameMenu" parent="." index="1" instance=ExtResource( 5 )]

_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Rect", "custom_fonts" ]

[node name="Fade" parent="." index="2" instance=ExtResource( 6 )]

margin_right = 0.0
margin_bottom = 0.0

[connection signal="lose_1" from="." to="Viewports/ViewportContainer1/FinishedLabel" method="_on_Player_lose"]

[connection signal="lose_2" from="." to="Viewports/ViewportContainer2/FinishedLabel" method="_on_Player_lose"]

[connection signal="waiting_1" from="." to="Viewports/ViewportContainer1/FinishedLabel" method="_on_Player_waiting"]

[connection signal="waiting_2" from="." to="Viewports/ViewportContainer2/FinishedLabel" method="_on_Player_waiting"]

[connection signal="win_1" from="." to="Viewports/ViewportContainer1/FinishedLabel" method="_on_Player_win"]

[connection signal="win_2" from="." to="Viewports/ViewportContainer2/FinishedLabel" method="_on_Player_win"]

[connection signal="finished_waiting" from="Viewports/ViewportContainer1/FinishedLabel" to="." method="_on_FinishedLabel_finished_waiting"]

[connection signal="finished_waiting" from="Viewports/ViewportContainer2/FinishedLabel" to="." method="_on_FinishedLabel_finished_waiting"]

[connection signal="player_finished" from="Viewports/ViewportContainer2/Viewport2/World" to="." method="_on_World_player_finished"]

[connection signal="return_to_title_screen" from="GameMenu" to="." method="_on_GameMenu_return_to_title_screen"]

[connection signal="stage_restart" from="GameMenu" to="." method="_on_GameMenu_stage_restart"]

[connection signal="fade_in_finished" from="Fade" to="." method="_on_Fade_fade_in_finished"]


